# AstrophysicsAndPython-SideProjects

./: README.md  requirements.txt  setup.cfg
.spyproject/config/backups/: workspace.ini.bak
black_body/: PlanckRadiationLaw.py  StefanBoltzmannLaw.py  WienDisplacementLaw.py
black_body_radiation/: StefanBoltzmannLaw.py  WienDisplacementLaw.py  __init__.py
conversions/: __init__.py  conversion_error_base.py  temperature_conversions.py
grbs/: light_curves.py  standard_grb_models.py
