[metadata]
name = sideprojects
url = https://github.com/AstrophysicsAndPython/AstrophysicsAndPython-SideProjects
author = Astrophysics And Python, Syed Ali Mohsin Bukhari
author_email = astrophysicsandpython@gmail.com
# license = MIT
# license_file = LICENSE.rst
description = Somewhere to store whatever I do in python :-)
long_description = file: README.md
long_description_content_type = text/markdown

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.7
packages = find: 
install_requires = 
    numpy<=1.21.4'

[options.package_data]
* = *.npy, *.npz

[flake8]
max-line-length = 180
